registry/components/nasdrive-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nasdrive
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
