registry/components/nasdrive-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nasdrive-ingress
  namespace: nasdrive
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  rules:
    - host: nasdrive.simonemms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nasdrive
                port:
                  number: 8080
  tls:
    - hosts:
        - nasdrive.simonemms.com
      secretName: nasdrive-tls
